syntax = "proto3";

package pb;

option go_package = "./pb";

enum ProductStatus {
  PRODUCT_STATUS_UNSPECIFIED = 0;
  PRODUCT_STATUS_ACTIVE = 1;
  PRODUCT_STATUS_INACTIVE = 2;
  PRODUCT_STATUS_ARCHIVED = 3;
}

message Money {
  int64 numerator = 1;
  int64 denominator = 2;
}

message Discount {
  double percentage = 1;
  string start_date = 2;
  string end_date = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;

  Money base_price = 5;
  Discount discount = 6;

  ProductStatus status = 7;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  double base_price = 4;
}

message CreateProductReply {
  string product_id = 1;
}


message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
}

message UpdateProductReply {
  bool success = 1;
}


message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {
  bool success = 1;
}


message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {
  bool success = 1;
}


message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  Product product = 1;
}


message ListProductsRequest {
  string category = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListProductsReply {
  repeated Product products = 1;
  int64 total = 2;
}

service ProductService {

  rpc CreateProduct(CreateProductRequest)
      returns (CreateProductReply);

  rpc UpdateProduct(UpdateProductRequest)
      returns (UpdateProductReply);

  rpc ActivateProduct(ActivateProductRequest)
      returns (ActivateProductReply);

  rpc DeactivateProduct(DeactivateProductRequest)
      returns (DeactivateProductReply);

  rpc GetProduct(GetProductRequest)
      returns (GetProductReply);

  rpc ListProducts(ListProductsRequest)
      returns (ListProductsReply);
}